--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang = "en" >
+<html lang = "ru" >
 <head >
   <meta charset = "UTF-8" >
-  <title >Title</title >
+  <title >GitHub</title >
+  <link rel = "stylesheet" href = "./style.css" >
 </head >
 <body >
   <h1>Hello GitHub!</h1>
