--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset = "UTF-8" >
   <title >GitHub</title >
   <link rel = "stylesheet" href = "./style.css" >
+  <script src="./index.js"></script>
 </head >
 <body >
   <h1>Hello GitHub!!!!!!!!!!!!</h1>
